--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "next": "14.1.0",
+    "qrcode": "^1.5.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.70.0",
+    "typescript": "^5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "sass": "^1.70.0",
-    "typescript": "^5"
+    "eslint-config-next": "14.1.0"
   }
 }
