--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "sass": "^1.70.0",
     "typescript": "^5",
     "yup": "^1.3.3"
